--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             <label for="stroke">Stroke</label>
             <input type="color" name="stroke" id="stroke">
             <label for="lineWidth">Line Width</label>
-            <input type="number" value="5" name="lineWidth" id="lineWidth">
+            <input type="number" value="5" name="lineWidth" id="lineWidth" min="1" max="50">
             <button id="clear">Clear</button>
         </div>
 
