fixed bug: lines would connect on other canvases even though several separate lines were drawn on the first canvas

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
             <label for="lineWidth">Line Width</label>
             <input type="number" value="5" name="lineWidth" id="lineWidth" min="1" max="50">
             <button id="clear">Clear</button>
+            <p>Connected People: </p><p id="clientSize"></p>
         </div>
 
         <div class="drawing-board">
