--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,16 @@
     <div class="container">
 
         <div id="toolbar">
-            <label for="stroke">Stroke</label>
+            <label for="stroke">Colour</label>
             <input type="color" name="stroke" id="stroke">
-            <label for="lineWidth">Line Width</label>
-            <input type="number" value="5" name="lineWidth" id="lineWidth" min="1" max="50">
+            <label for="lineWidth">Size</label>
+            <!-- <input type="number" value="5" name="lineWidth" id="lineWidth" min="1" max="50"> -->
+            <input type="range" id="lineWidth" name="lineWidth" min="1" max="50" value="5">
             <button id="clear">Clear</button>
-            <p>Connected People: </p><p id="clientSize"></p>
+            <div class="clientSizeContainer">
+                <p>People : </p><p id="clientSize"></p>
+            </div>
+            
         </div>
 
         <div class="drawing-board">
