--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="https://kit.fontawesome.com/bf456a88d2.js" crossorigin="anonymous"></script>
     <title>Online Paint</title>
 </head>
 <body>
     <div class="container">
-
         <div id="toolbar">
-            <label for="stroke">Colour</label>
             <input type="color" name="stroke" id="stroke">
-            <label for="lineWidth">Size</label>
-            <!-- <input type="number" value="5" name="lineWidth" id="lineWidth" min="1" max="50"> -->
+            <i class="fa-solid fa-brush"></i>
             <input type="range" id="lineWidth" name="lineWidth" min="1" max="50" value="5">
+            
+            <p id="square"><i class="fa-regular fa-square"></i>Square</p>
+            <p id="circle"><i class="fa-regular fa-circle"></i>Circle</p>
+            <p><input type="checkbox" name="fillColour" id="fillColour">Fill</p>
             <button id="clear">Clear</button>
+
             <div class="clientSizeContainer">
                 <p>People : </p><p id="clientSize"></p>
             </div>
