--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                 <input class="toolbarItem" type="color" name="stroke" id="stroke">
                 <p class="toolbarItem"><i class="fa-solid fa-brush"></i><input type="range" id="lineWidth" name="lineWidth" min="1" max="50" value="5"></p>
             </div>
-            
+
             <div id="buttonContainer">
                 <button id="clear" class="btn">Clear Canvas</button>
                 <button id="saveImg" class="btn">Save as Image</button>
@@ -27,13 +27,13 @@
             
             <div id="chat">
                 <h1>Chat With People</h1>
-                <p><input type="text" name="messageBox" id="messageBox"><button id="chatButton"><i class="fa-solid fa-paper-plane"></i></button></p>
+                <p id="chatBoxInput"><input type="text" name="messageBox" id="messageBox"><button id="chatButton"><i class="fa-solid fa-paper-plane"></i></button></p>
                 <div id="chatMessages"></div>
             </div>
         </div>
 
         <div id="canvasContainer">
-            <canvas id="drawing-board"></canvas>
+            <canvas id="drawingBoard"></canvas>
         </div>
     </div>
 
