username functionality added, you can now see username in chat

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
             
             <div id="chat">
                 <h1>Chat With People</h1>
+
+                <div id="usernameContainer">
+                    <p>Your username is :</p><p id="clientUsername"></p>
+                </div>
+ 
                 <p id="chatBoxInput"><input type="text" name="messageBox" id="messageBox"><button id="chatButton"><i class="fa-solid fa-paper-plane"></i></button></p>
                 <div id="chatMessages"></div>
             </div>
